fix: fix alignment of rewards on homepage

--- a/src/pages/Home/TableCard/index.module.scss
+++ b/src/pages/Home/TableCard/index.module.scss
@@ -44,6 +44,11 @@
 .reward {
   margin-top: 7px;
   height: 24px;
+
+  @media screen and (width <= $mobileBreakPoint) {
+    margin-top: 0;
+    height: auto;
+  }
 }
 
 .capacity {
